--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,11 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
-.page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+.theme_dark {
+  --accent-color: rgb(255, 0, 112);
+  --bg-color: rgb(0, 0, 40);
+  --text-color: rgb(241, 178, 206);
+  --main-header-color: rgb(219, 0, 255);
+  --accent-color-header:  rgb(255, 0, 112);
+  --accent-color-header-hover:  rgba(255, 0, 112, 0.4);
+  --backgroubd-img: url(../images/cover-image-dark.png);
+  --minor-header-color: var(--bg-color);
+  --dispaly-option: block;
 }
