--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,12 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+.theme_light{
+  --accent-color: rgb(255, 141, 203);
+  --bg-color: rgb(255, 241, 247);
+  --text-color: rgb(53, 52, 48);
+  --main-header-color: rgb(255, 194, 230);
+  --accent-color-header: rgb(53, 3, 48);
+  --accent-color-header-hover:  rgba(53, 3, 48, 0.4);
+  --backgroubd-img: url(../images/cover-image-light.png);
+  --minor-header-color: var(--text-color);
+  --display-option: none;
+} 
 
-.page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
