--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,13 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --accent-color: rgb(255, 0, 112);
+  --bg-color: rgb(0, 0, 40);
+  --text-color: rgb(241, 178, 206);
+  --main-header-color: rgb(219, 0, 255);
+  --accent-color-header: rgb(255, 0, 112);
+  --accent-color-header-hover:  rgba(255, 0, 112, 0.4);
+  --backgroubd-img: url(../images/cover-image-dark.png);
+  --minor-header-color: var(--bg-color);
+  --font: "IBM Plex Mono", sans-serif;
+  --font-size: 18px;
+  --display-option: block;
+}
