--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,6 @@
   line-height: 1em;
   text-transform: lowercase;
   background-color: transparent;
-  /*------------------------------------------------*/
   cursor: pointer;
   inline-size: 70px;
   block-size: 26px;
@@ -123,9 +122,7 @@
   box-shadow: 0px 0px 4px 2px var(--accent-color);
   background: var(--accent-color);
 }
-/*-------------------------------------*/
 
-/*----------section why----------------*/
 .section-content {
   margin: 50px 10px;
 }
@@ -133,14 +130,15 @@
 .main-header {
   color: var(--accent-color);
   font-weight: bold;
-  font-size: 18px;
+  font-size: var(--font-size);
+  line-height: 23.4px;
 }
 
 .minor-header {
   margin-block-start: 20px;
   margin-block-end: 10px;
   color: var(--minor-header-color);
-  font-size: 18px;
+  font-size:  var(--font-size);
   background-color: var(--accent-color);
 }
 
@@ -169,15 +167,11 @@
   border: 1px solid currentColor;
 }
 
-/*----------section what----------------*/
-
-/*----------section how-----------------*/
 .low-header {
   height: 23px;
   font-weight: normal;
 }
 
-/*----------section figure--------------*/
 .figure-grid {
   display: grid;
   gap: 10px;
@@ -194,8 +188,6 @@
   width: 100%;
 }
 
-/*----------footer--------------*/
-
 .footer {
   position: relative;
   display: grid;
@@ -203,4 +195,175 @@
   align-content: center;
   height: calc(100vmax - 20px);
   margin: 0 10px 10px;
+}
+
+@media (768px <= width) { 
+  .header {
+    grid-template-rows: 1fr 100px 1fr;
+    height: calc(100vh - 40px);
+    margin: 20px;
+  }
+
+  .header__main {
+    margin-inline-start: -20px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__main-description {
+    justify-self: self-end;
+    width: 50%;
+  }
+
+  .section-content {
+    margin: 80px 20px;
+  }
+
+  .why {
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    column-gap: 38px;
+  }
+
+  .why__main-header {
+    grid-row: 1 / span 4;
+  }
+
+  .why__minor-header {
+    margin-block-start: 0;
+  }
+
+  .why__article:not(:last-child) {
+    margin-block-end: 20px;
+  }
+
+  .what {
+    display: grid;
+    grid-template-columns: 30% 1fr;
+  }
+
+  .what__minor-header {
+    grid-column: 1 / span 2;
+  }
+
+  .what__article {
+    grid-column: 1 / span 2;
+  }
+
+  .how {
+    display: grid;
+    grid-template-columns: 32% 1fr;
+    row-gap: 9px;
+    column-gap: 24px;
+    margin-top: 28px;
+  }
+
+  .how__article {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .how__minor-header {
+    margin-block-start: 0;
+  }
+
+  .how__low-header {
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+  } 
+
+  .how__article div{
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+  }
+
+  .how__article div:last-child{
+    margin-block-end: 3px;
+  }
+  
+  .how__article h4{
+    margin-block-end: 10px;
+  }
+
+
+  .how__article:not(:last-child) {
+    margin-block-end: 10px;
+  }
+
+  .figure {
+    display: grid;
+    gap: 10px;
+    width: calc(100% - 40px);
+    margin-top: 17px;
+  }
+
+  .figure-grid {
+    display: grid;
+    grid-template-columns: repeat(3, calc(1/3 * (100% - 40px)));
+    grid-template-rows:max-content;
+    gap: 20px;
+  }
+
+  .figure__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .figure__img-1 {
+    grid-column: span 2;
+  }
+
+  .figure__img-2 {
+    grid-row: span 2;
+  }
+
+  .figure__img-3 {
+    grid-row: span 2;
+  }
+
+  .figure__img-5 {
+    grid-column: span 2;
+  }
+
+  /*-------footer----------*/
+  .footer {
+    height: calc(100vh - 40px);
+    margin: 0 20px 20px;
+  }
+}
+
+@media (1024px <= width) { 
+  .header {
+    grid-template-rows: 1fr 130px 1fr;  
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+
+  .what {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-columns: 1fr;
+    column-gap: 20px;
+    grid-auto-flow: row;
+  }
+
+  .what__main-header {
+    grid-column-start: 1;
+    grid-column-end: -1;
+    padding-inline-end: 70%;
+  }
+
+  .what__article {
+    grid-column: auto;
+  }
 }
