--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
   background-image: var(--backgroubd-img);
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 
 .header {
@@ -15,15 +16,15 @@
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
-  height: calc(100vmax - 20px);
-  margin: 10px;
+  height: max(668px, 100vh);
+  padding: 10px;
 }
 
 .decorated-zone::after {
   content: "";
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   border-inline-end: 1px solid var(--accent-color-header);
   border-block-start: 1px solid var(--accent-color-header);
   inline-size: 25px;
@@ -33,8 +34,8 @@
 .decorated-zone::before {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 10px;
+  left: 10px;
   border-inline-start: 1px solid var(--accent-color-header);
   border-block-end: 1px solid var(--accent-color-header);
   inline-size: 25px;
@@ -104,8 +105,8 @@
 
 .header__main-hidden-span {
   position: absolute;
-  top: 0;
-  right: 28px;
+  top: 10px;
+  right: 38px;
   display: var(--display-option);
   color: var(--accent-color);
 }
@@ -127,8 +128,12 @@
   margin: 50px 10px;
 }
 
+.section-content:first-child, .section-content:last-child {
+  margin: 40px 10px;
+}
+
 .main-header {
-  color: var(--accent-color);
+  color: var(--accent-color-header);
   font-weight: bold;
   font-size: var(--font-size);
   line-height: 23.4px;
@@ -193,15 +198,15 @@
   display: grid;
   justify-content: center;
   align-content: center;
-  height: calc(100vmax - 20px);
-  margin: 0 10px 10px;
+  height: max(668px, 100vh);
+  padding: 10px;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
 
 @media (768px <= width) {
   .header {
-    height: calc(100vh - 40px);
-    margin: 20px;
+    height: max(668px, 100vh);
+    padding: 20px;
   }
 
   .header__main {
@@ -214,8 +219,27 @@
     width: 50%;
   }
 
+  .decorated-zone::after {
+    top: 20px;
+    right: 20px;
+  }
+  
+  .decorated-zone::before {  
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header__main-hidden-span {
+    top: 20px;
+    right: 48px;
+  }
+  
   .section-content {
     margin: 80px 20px;
+  }
+
+  .section-content:first-child, .section-content:last-child {
+    margin: 60px 20px;
   }
 
   .why {
@@ -335,8 +359,8 @@
 
   /*-------footer----------*/
   .footer {
-    height: calc(100vh - 40px);
-    margin: 0 20px 20px;
+    height: max(668px, 100vh);
+    padding: 20px;
   }
 
   .footer__header {
